<resources>
    <string name="app_name">hubble</string>

    <!--Login-->
    <string name="login_label">Login</string>
    <string name="email_label">Email</string>
    <string name="pass_label">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_account">Create an account</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_announce">login to your account</string>
    <string name="login_with">Login with</string>
    <string name="or">Or</string>
    <string name="warning_username">Please input your user name</string>
    <string name="warning_password">Please input your password</string>
    <string name="reset_pass_label">Reset password</string>
    <string name="reset_pass_success">success to reset password!</string>

    <!--Register-->
    <string name="register_label">Register</string>
    <string name="confirm_pass_label">Confirm Password</string>
    <string name="next_label">Next</string>
    <string name="agree_label">agree to our terms</string>
    <string name="privacy_policy_label">Privacy Rules</string>
    <string name="have_an_account">Already have an account</string>
    <string name="register_announce">create an account</string>
    <string name="agree_announce">By click next, you %1$s and that you have read our %2$s.</string>
    <string name="warning_email">Please input a valid email</string>
    <string name="warning_confirm_password">Confirm password does not match the password</string>

    <!--Setting-->
    <string name="setting_label">Setting</string>
    <string name="profile_label">profile</string>
    <string name="change_password_label">Change password</string>
    <string name="do_not_disturb_label">Do not disturb</string>
    <string name="user_support_label">User support</string>
    <string name="send_app_log">Send App Log</string>
    <string name="app_version_label">Lucy - App version %1$s</string>
    <string name="username_label">Username</string>
    <string name="old_pass_label">Old Password</string>
    <string name="new_pass_label">New Password</string>
    <string name="logout_label">Logout</string>
    <string name="change_pass_success">success to change password!</string>


    <!--Setup-->
    <string name="add_device_label">Add a device</string>
    <string name="buy_label">Buy Now</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="device_activated_announce">Device activated!</string>

    <!--Devices-->
    <string name="devices_label">Devices</string>

    <!--Device feature-->
    <string name="tap_to_talk">Tap To Talk</string>

    <!--Events-->
    <string name="events_label">Events</string>
</resources>
