<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Android_Design_rhythmThird"
                android:layout_marginTop="@dimen/Android_Design_rhythmThird"
                android:text="@string/profile_label"
                android:textAllCaps="true"
                android:textAppearance="@style/App.TextAppearance.MediumGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Android_Design_rhythmThird"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username_label"
                            android:textAppearance="@style/App.TextAppearance.MediumBlack" />


                        <TextView
                            android:id="@+id/textview_username_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textAppearance="@style/App.TextAppearance.MediumBlack" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_label"
                            android:textAppearance="@style/App.TextAppearance.MediumBlack" />


                        <TextView
                            android:id="@+id/textview_email_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textAppearance="@style/App.TextAppearance.MediumBlack" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_setting_change_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password_label"
                            android:textAppearance="@style/App.TextAppearance.MediumRed" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/do_not_disturb_label"
                            android:textAppearance="@style/App.TextAppearance.MediumBlack" />


                        <android.support.v7.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Android_Design_rhythmThird"
                android:layout_marginTop="@dimen/Android_Design_rhythmThird"
                android:text="@string/user_support_label"
                android:textAllCaps="true"
                android:textAppearance="@style/App.TextAppearance.MediumGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Android_Design_rhythmThird">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_app_log"
                        android:textAppearance="@style/App.TextAppearance.MediumRed" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textview_app_version_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/Android_Design_rhythmThird"
                android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                android:text="@string/app_version_label"
                android:textAppearance="@style/App.TextAppearance.MediumGrey" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
