<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/register_bg" />

    <ScrollView
        android:id="@+id/container_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/register_announce"
                android:textAllCaps="true"
                android:textAppearance="@style/App.TextAppearance.LargeGrey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Android_Design_rhythmThird"
                    android:background="@drawable/bg_white_border_all"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_height="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/Android_Design_rhythmSixth"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/username_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/Android_Design_rhythmSixth"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/email_label"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                    android:background="@drawable/bg_white_border_all"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_height="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/Android_Design_rhythmSixth"
                        android:src="@drawable/ic_password" />

                    <EditText
                        android:id="@+id/password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/Android_Design_rhythmSixth"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/pass_label"
                        android:inputType="textPassword" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                    android:background="@drawable/bg_white_border_all"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_height="@dimen/Android_Design_rhythmTwoThirds"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/Android_Design_rhythmSixth"
                        android:src="@drawable/ic_password" />

                    <EditText
                        android:id="@+id/confirm_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/Android_Design_rhythmSixth"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/confirm_pass_label"
                        android:inputType="textPassword" />

                </LinearLayout>

                <com.cinatic.demo2.views.customs.ProgressButton
                    android:id="@+id/progressbutton_register_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Android_Design_rhythmTwoThirds"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/Android_Design_rhythmThird"
                    android:background="@drawable/button_accent_round_all"
                    android:text="@string/have_an_account"
                    android:textColor="@color/white" />


                <com.cinatic.demo2.views.customs.ProgressButton
                    android:id="@+id/progressbutton_register_next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Android_Design_rhythmTwoThirds"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/Android_Design_rhythmSixth"
                    android:background="@drawable/button_accent_round_all"
                    android:text="@string/next_label"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textview_register_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/agree_announce"
                    android:textAllCaps="false"
                    android:textAppearance="@style/App.TextAppearance.VerySmallGrey" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>